--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,16 +1,45 @@
-// http://ionicframework.com/docs/theming/
+.my-container {
+  background-image:  url("../assets/imgs/back.jpg");
+  background-repeat: repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  position: absolute;
+}
+.items{
+  background-color: whitesmoke ;
+  color: black;
+}
 
+.bar-profile {
+  background-color: black;
+  height: 170px;
+}
 
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
+.profile {
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 0;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  padding-top: 15px;
+}
+
+.name {
+  color: #e6ad22;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
+
+.profile-picture {   border-radius: 50%;
+}
+
+.menu
+{
+  top: 169px;
+}
