modification de certains interfaces 31/08/2018 16:15

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,5 @@
 .my-container {
-  background-image:  url("../assets/imgs/back.jpg");
+  background-image:  url("../assets/imgs/wallg.jpg");
   background-repeat: repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -8,8 +8,8 @@
   position: absolute;
 }
 .items{
-  background-color: whitesmoke ;
-  color: black;
+  background-color: transparent ;
+  color: whitesmoke;
 }
 
 .bar-profile {
