--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,7 +9,9 @@
 }
 .items{
   background-color: transparent ;
-  color: whitesmoke;
+  color:black ;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .bar-profile {
