--- a/src/pages/compte/compte.scss
+++ b/src/pages/compte/compte.scss
@@ -10,13 +10,21 @@ page-compte {
     white-space: nowrap;
     width: 100%;
     padding-top: 15px;
+
+  }
+  .fabC{
+    margin-left:185px;
+    margin-right:15px;
+    margin-top: 5px !important;
+
   }
   .name {
-    color: #e6ad22;
+    color: black;
     margin-top: 10px !important;
     margin-bottom: 10px !important;
   }
-  .profile-picture {   border-radius: 50%;
+  .profile-picture {   border-radius:50%;
+    border: 100px;
   }
   .menu
   {
@@ -29,4 +37,5 @@ page-compte {
   .items{
    text-align: right;
   }
+
 }
