--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <ion-menu [content]="content" >
-  <ion-header class="bar-profile">
+  <ion-header class="bar-profile" no-border>
 
     <div class="profile">
       <img class="profile-picture" src="../assets/imgs/reap.jpg" />
@@ -10,21 +10,83 @@
   <ion-content class="my-container">
 
     <ion-grid>
+<ion-card style="background-color:#6c5373 ">
       <ion-row>
-
-
-          <button menuClose ion-item *ngFor="let m of menus" (click)="onPage(m)" class="items">
-            <ion-col col-4>
-            <ion-card>
-          <ion-icon name="{{m.icon}}" item-left></ion-icon>
-          {{m.title}}
-            </ion-card>
-            </ion-col>
-          </button>
-
-
+        <ion-col col-6>
+          <ion-card>
+          <ion-card-header>
+            Ajouter
+          </ion-card-header>
+          <ion-card-content>
+            <button menuClose ion-item  (click)=MesimmobPage class="items">
+              <ion-icon name="md-add" item-center></ion-icon>
+            </button>
+          </ion-card-content>
+        </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card>
+          <ion-card-header>
+          Acceuil
+        </ion-card-header>
+          <ion-card-content>
+            <button menuClose ion-item  (click)='{}' class="items">
+          <ion-icon name="md-home" item-center></ion-icon>
+        </button>
+          </ion-card-content>
+        </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card>
+            <ion-card-header>
+              Compte
+            </ion-card-header>
+            <ion-card-content>
+              <button menuClose ion-item  (click)='ComptePage' class="items">
+                <ion-icon name="md-person" item-center></ion-icon>
+              </button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card>
+            <ion-card-header>
+              Partager
+            </ion-card-header>
+            <ion-card-content>
+              <button menuClose ion-item  (click)=ComptePage class="items">
+                <ion-icon name="md-share" item-center></ion-icon>
+              </button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card>
+            <ion-card-header>
+              Parametre
+            </ion-card-header>
+            <ion-card-content>
+              <button menuClose ion-item  (click)=ParametrePage class="items">
+                <ion-icon name="md-settings" item-center></ion-icon>
+              </button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card>
+            <ion-card-header>
+              Aide
+            </ion-card-header>
+            <ion-card-content>
+              <button menuClose ion-item  (click)=AidePage class="items">
+                <ion-icon name="md-help" item-center></ion-icon>
+              </button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
 
       </ion-row>
+      </ion-card>
     </ion-grid>
   </ion-content>
 </ion-menu>
