--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -1,6 +1,7 @@
 page-detail {
+  /*
   .maclasse{background-color: #1e2b39;}
-  .ioncard{ background-color: #9c37d1;}
+  .ioncard{ background-color: white;}
   ion-slide.swiper-slide {
     left: 25%;
   }
@@ -13,15 +14,15 @@ page-detail {
     padding: 10px;
   }
   .my-container {
-    background-image:  url("../assets/imgs/wallg.jpg");
+    //background-image:  url("../assets/imgs/wallg.jpg");
     //background-color:#6c5373 ;
-    background-repeat: repeat;
+   // background-repeat: repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     height: 100%;
     position: absolute;
-  }
+  }*/
 
 
 }
