Modification de la page Détail et ajout des liens vers les pages du menu

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,6 @@
 .my-container {
-  //background-image:  url("../assets/imgs/wallg.jpg");
-  background-color:#6c5373 ;
+  background-image:  url("../assets/imgs/wallg.jpg");
+ // background-color:#6c5373 ;
   background-repeat: repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -9,7 +9,7 @@
   position: absolute;
 }
 .items{
-  background-color: #6c5373 ;
+  //background-color: #6c5373 ;
   color:black ;
   font-size: 20px;
   font-weight: bold;
