--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,7 +10,7 @@
   <ion-content class="my-container">
 
     <ion-grid>
-<ion-card style="background-color:#6c5373 ">
+<ion-card style="background-color:transparent ">
       <ion-row>
         <ion-col col-6>
           <ion-card>
@@ -18,7 +18,7 @@
             Ajouter
           </ion-card-header>
           <ion-card-content>
-            <button menuClose ion-item  (click)=MesimmobPage class="items">
+            <button menuClose ion-item   (click)=Immobpage() class="items">
               <ion-icon name="md-add" item-center></ion-icon>
             </button>
           </ion-card-content>
@@ -30,7 +30,7 @@
           Acceuil
         </ion-card-header>
           <ion-card-content>
-            <button menuClose ion-item  (click)='{}' class="items">
+            <button menuClose ion-item  (click)=Homepage() class="items">
           <ion-icon name="md-home" item-center></ion-icon>
         </button>
           </ion-card-content>
@@ -42,7 +42,7 @@
               Compte
             </ion-card-header>
             <ion-card-content>
-              <button menuClose ion-item  (click)='ComptePage' class="items">
+              <button menuClose ion-item  (click)=Comptepage() class="items">
                 <ion-icon name="md-person" item-center></ion-icon>
               </button>
             </ion-card-content>
@@ -54,7 +54,7 @@
               Partager
             </ion-card-header>
             <ion-card-content>
-              <button menuClose ion-item  (click)=ComptePage class="items">
+              <button menuClose ion-item  (click)=Partagerpage() class="items">
                 <ion-icon name="md-share" item-center></ion-icon>
               </button>
             </ion-card-content>
@@ -66,7 +66,7 @@
               Parametre
             </ion-card-header>
             <ion-card-content>
-              <button menuClose ion-item  (click)=ParametrePage class="items">
+              <button menuClose ion-item  (click)=Parametrepage() class="items">
                 <ion-icon name="md-settings" item-center></ion-icon>
               </button>
             </ion-card-content>
@@ -78,7 +78,7 @@
               Aide
             </ion-card-header>
             <ion-card-content>
-              <button menuClose ion-item  (click)=AidePage class="items">
+              <button menuClose ion-item  (click)=Aidepage() class="items">
                 <ion-icon name="md-help" item-center></ion-icon>
               </button>
             </ion-card-content>
